--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,11 @@
             <version>3.3.6</version>
         </dependency>
 
+        <!-- Logging Dependencies -->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
